--- a/css/style.css
+++ b/css/style.css
@@ -114,3 +114,16 @@ body{
 .not_seen{
 	font-weight: bold;
 }
+
+
+
+
+#content{
+	overflow: hidden;
+}
+#content.open{
+	max-height: 600px;
+}
+#show-more{
+	font-size: 18px;
+}
